# deformationTransfer

./: .gitignore  CMakeLists.txt  README.md
adjCalculator/: CMakeLists.txt  adjacent.cpp  main.cpp
common/: adjacent.cpp  adjacent.h  mesh.cpp  mesh.h  surfaceInvMatrix.cpp  surfaceInvMatrix.h  triangle.cpp  triangle.h
corressolve/: 3dtree.cpp  3dtree.h  CMakeLists.txt  CorrespondenceProblem.cpp  CorrespondenceProblem.h  cholmod_builder.cpp  cholmod_builder.h  correspondences.cpp  correspondences.h  main.cpp  triangleMapping.cpp  triangleMapping.h
correstool/: CMakeLists.txt  controls.cpp  controls.h  correspondence.cpp  correspondence.h  main.cpp  renderer.cpp  renderer.h  select.cpp  utils.cpp  utils.h
deformationtransfer/: CMakeLists.txt  cholmod_builder.cpp  cholmod_builder.h  correspondences.cpp  correspondences.h  main.cpp  transformer.cpp  transformer.h
testing/: show_objFile.py  test_adj.sh  test_corresSolve.sh  test_corresTool.sh  test_deformation.sh
testing/my own calculated results/: cammel.adj  resolved_correspondences.csv  user_correspondences.csv
